# ScraBrain

./: .dockerignore  .env.eeg-reading-listening.example  .env.example  .gitignore  .sweep_mode  .sweep_plan.json  CITATION.cff  Dockerfile  LICENSE_MEGXL  README.md  README.txt  README_EEGXL.md  README_EEG_MULTI_TRAINING.md  README_MEGXL.md  README_MEGXL_PRETRAINING.md  README_REPRODUCIBILIDAD.md  README_speech_image_experiments.md  alice_three_way.latest  convert_to_libribrain_format.py  cosas.txt  docker-compose.eeg-reading-listening.yml  docker-compose.eeg-train.yml  docker-compose.yml  ds004408_three_way.latest  install.sh  launch.sh  libribrain.ipynb  libribrain.py  meg_gpu_cwt.py  meg_transfer_learning_libribrain.py  monitor_server.py  nohup.out  old_run_sweep.sh  pipeline_libribrain_a_entrenamiento.ipynb  pruebas.ipynb  pyproject.toml  requirements.txt  run_armeni_evals.sh  run_armeni_gwilliams_evals.sh  run_armeni_webdav_download.sh  (+11 more)
brainstorm/: __init__.py  eeg_meg_joint.py  eval_metrics_history.py  evaluate_criss_cross_word_classification.py  evaluate_criss_cross_word_classification_alice_fixed.py  evaluate_criss_cross_word_classification_alice_reported.py  evaluate_criss_cross_word_classification_linear_probe.py  evaluate_criss_cross_word_classification_weissbart.py  evaluate_criss_cross_word_classification_weissbart_reported.py  megxl_test_reporting.py  optimized_word_finetuning.py  train_criss_cross_eeg_continuous.py  train_criss_cross_eeg_curriculum.py  train_criss_cross_eeg_multi.py  train_criss_cross_multi.py
configs/: ds004408_word_finetuning.yaml  eval_criss_cross_word_classification_alice_eeg.yaml  eval_criss_cross_word_classification_armeni.yaml  eval_criss_cross_word_classification_eeg_listening.yaml  eval_criss_cross_word_classification_eeg_reading.yaml  eval_criss_cross_word_classification_eeg_reading_listening.yaml  eval_criss_cross_word_classification_gwilliams.yaml  eval_criss_cross_word_classification_libribrain.yaml  eval_criss_cross_word_classification_linear_probe_armeni.yaml  eval_criss_cross_word_classification_linear_probe_gwilliams.yaml  eval_criss_cross_word_classification_linear_probe_libribrain.yaml  eval_criss_cross_word_classification_weissbart_eeg.yaml  eval_criss_cross_word_classification_zuco.yaml  train_criss_cross_eeg_language_listening_continuous.yaml  train_criss_cross_eeg_listening_continuous.yaml  (+6 more)
memoria/: tfm.tex  (+5 more)
(+509 files in other folders)
