[project]
name = "scrabrain"
version = "0.1.0"
description = "MEG/EEG decoding experiments for imagined speech recognition"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "h5py>=3.8.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.4,<2.0",
    "pnpl==0.0.8",
    "pywavelets>=1.4.0",
    "scikit-learn==1.3.0",
    "scipy>=1.10.0",
    "tensorboard>=2.13.0",
    "timm==0.9.16",
    "tqdm>=4.64.0",
]

[tool.uv]
package = false

# The base Docker image already provides CUDA-enabled PyTorch. timm declares
# torch/torchvision as dependencies, but they must resolve from the base image.
[[tool.uv.dependency-metadata]]
name = "timm"
version = "0.9.16"
requires-dist = [
    "huggingface-hub",
    "pyyaml",
    "safetensors",
]

[[tool.uv.dependency-metadata]]
name = "pnpl"
version = "0.0.8"
requires-dist = [
    "h5py",
    "huggingface-hub",
    "mne",
    "mne-bids",
    "numpy",
    "pandas",
]
