[project]
name = "scrabrain"
version = "0.1.0"
description = "MEG/EEG decoding experiments for ScraBrain and MEG-XL."
requires-python = ">=3.12,<3.13"
dependencies = [
    "einops>=0.6.0",
    "h5py>=3.8.0",
    "hydra-core>=1.3.0",
    "mat73>=0.65",
    "matplotlib>=3.7.0",
    "mne>=1.4.0",
    "numpy>=1.24.0,<2.0",
    "omegaconf>=2.3.0",
    "pandas>=2.0.0",
    "pnpl==0.0.8",
    "protobuf>=4.25.0",
    "pytorch-lightning>=2.0.0",
    "pywavelets>=1.4.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "sentencepiece>=0.2.0",
    "tensorboard>=2.13.0",
    "timm>=0.9.16",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "torchvision>=0.15.0",
    "tqdm>=4.65.0",
    "transformers>=4.38.0",
    "wandb>=0.15.0",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["brainstorm*"]

[tool.setuptools.package-data]
"brainstorm.neuro_tokenizers" = ["*.pt"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
